Tue Oct  3 15:40:12 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c test fwrite(3) correctly

Tue Sep 26 16:57:42 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c src/dblib/dblib.c
	* src/tds/convert.c src/tds/net.c src/tds/token.c
	- added more user-level error checking, checking against 
	- known list of db-lib error messages
	* src/apps/osql added

Wed Sep 13 13:55:24 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* samples/Makefile.am samples/unixodbc.freetds.driver.template.in:
	- add Setup entry to unixODBC template
	- unixODBC templates are not executables

Wed Sep 13 13:52:40 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/mem.c: enable wide table

Wed Sep 13 11:47:27 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c:
	- fix really broken tds5_process_result

Fri Sep 08 11:58:24 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/tds/threadsafe.c:
	- fix threadsafe problem on NetBSD

Fri Sep 08 11:17:55 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/token.c: make splint a bit more happy
	* src/odbc/odbc.c: small 64bit improvements

Thu Sep 07 23:10:29 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/sql2tds.c: fix paramset (Levente Tamási)

Fri Sep  1 10:34:20 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h include/tdsstring.h src/ctlib/ct.c:
	* src/odbc/connectparams.c src/odbc/odbc.c src/server/login.c:
	* src/tds/config.c src/tds/tdsstring.c:
	- add dstr_size to DSTR
	- add tds_dstr_alloc, tds_dstr_setlen, tds_dstr_buf

Wed Aug 30 13:58:56 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/challenge.c src/tds/login.c:
	- make tds_answer_challenge return flags
	- tds_dstr fix
	* src/dblib/dblib.c: small fix
	* src/odbc/odbc.c: constification
	* src/tds/query.c:
	- some static functions rename
	- do not convert string in tds7_build_param_def_from_query