@@ -1,10 +1,11 @@
-# $Id: Makefile.am,v 1.16 2006-06-19 08:39:48 freddy77 Exp $
+# $Id: Makefile.am,v 1.17 2006-10-04 18:14:53 jklowden Exp $
 
 AM_CPPFLAGS	= -I$(top_srcdir)/include 
+
 bin_PROGRAMS	= tsql freebcp bsqldb defncopy datacopy
+bin_SCRIPTS	= osql
 
 freebcp_LDADD	= ../dblib/libsybdb.la $(NETWORK_LIBS)
-
 freebcp_SOURCES = freebcp.c freebcp.h
 
 tsql_LDADD	= ../tds/libtds.la \
