@@ -1,3 +1,6 @@
+Wed Oct  4 14:12:25 EDT 2006	JK Lowden <jklowden@freetds.org>
+	* src/apps/Makefile.am add osql as installable script
+
 Tue Oct  3 15:40:12 EDT 2006	JK Lowden <jklowden@freetds.org>
 	* src/dblib/bcp.c test fwrite(3) correctly
 
